[gd_scene load_steps=2 format=3 uid="uid://cslajs8kmrir0"]

[ext_resource type="Script" uid="uid://bw2d1mmjaplrl" path="res://scenes/first_normal_scene/ui.gd" id="1_7jbm8"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_7jbm8")

[node name="TimerLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
